--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -3,6 +3,7 @@ name: Wait 20 seconds to simulate check pipeline
 "on":
   pull_request:
     types: [opened, reopened, synchronize]
+  merge_group:
 
 jobs:
   pull-request:
