--- a/.github/workflows/after-approval.yaml
+++ b/.github/workflows/after-approval.yaml
@@ -3,7 +3,7 @@ name: Wait 30 seconds to simulate gate tests
 "on":
   pull_request_review:
     types: [submitted]
-  workflow_dispatch:
+  merge_group:
 
 jobs:
   after-approval:
